Adicionado camera externa; feed de fotos trazendo todas as fotos do banco

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,5 +17,10 @@
         android:icon="@drawable/ic_action_camera"
         android:orderInCategory="300"
         app:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_compartilhar_camera"
+        android:title="@string/action_compartilhar"
+        android:icon="@drawable/ic_action_camera"
+        android:orderInCategory="300"
+        app:showAsAction="ifRoom"/>
 
 </menu>
