--- a/app/src/main/res/layout/lista_postagem.xml
+++ b/app/src/main/res/layout/lista_postagem.xml
@@ -4,12 +4,29 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <ImageView
-        android:id="@+id/image_lista_postagem"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:scaleType="fitCenter"
-        android:padding="8dp"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/nome_autor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nome do autor"
+            android:textColor="@color/cinzaEscuro"
+            android:textStyle="bold"
+            android:paddingTop="5dp"/>
+
+        <ImageView
+            android:id="@+id/image_lista_postagem"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:scaleType="fitCenter"
+            android:padding="8dp"
+            />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
