--- a/app/src/main/res/layout/lista_postagem.xml
+++ b/app/src/main/res/layout/lista_postagem.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,11 +24,12 @@
         <ImageView
             android:id="@+id/image_lista_postagem"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
+            android:minHeight="300dp"
             android:scaleType="fitCenter"
-            android:padding="8dp"
+            android:adjustViewBounds="true"
+            tools:src="@tools:sample/backgrounds/scenic"
             />
-
 
     </LinearLayout>
 
