--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
+    android:background="@drawable/fundo_degrade"
     tools:context="com.example.thiago.testeparse.fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
