--- a/app/src/main/res/layout/activity_feed_usuarios.xml
+++ b/app/src/main/res/layout/activity_feed_usuarios.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.thiago.testeparse.Activity.FeedUsuariosActivity">
 
-    <include layout="@layout/toolbar"
+    <include layout="@id/toolbar"
         android:id="@+id/toolbar_feed_usuario"/>
 
     <include layout="@layout/content_feed_usuarios" />
