--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,9 @@
 
     <include
         android:id="@+id/toolbar_principal"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar"
+
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager_main"
