--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:id="@+id/toolbar"
     android:layout_height="wrap_content"
+    android:elevation="2dp"
+    />
 
-    android:elevation="2dp"/>
 
